--- a/src/main/config/dev.properties
+++ b/src/main/config/dev.properties
@@ -1,6 +1,6 @@
 log.level.all=INFO
 log.level.src=DEBUG
-log.level.sql=INFO
+log.level.sql=DEBUG
 log.level.sql.results=OFF
 
 db.url.apidb=jdbc:mysql://localhost:3306/apidb
