--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -13,6 +13,6 @@ log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p %t (%F:%L): %m%n
 
-log4j.category.company=${log.level.src}
+log4j.category.company.api=${log.level.src}
 log4j.logger.org.hibernate.SQL=${log.level.sql}
 log4j.logger.org.hibernate.type=${log.level.sql.results}
