--- a/src/main/config/dev.properties
+++ b/src/main/config/dev.properties
@@ -1,7 +1,7 @@
 log.level.all=INFO
 log.level.src=DEBUG
 log.level.sql=DEBUG
-log.level.sql.results=TRACE
+log.level.sql.results=OFF
 
 db.url.apidb=jdbc:mysql://localhost:3306/apidb
 db.url.apishard0=jdbc:mysql://localhost:3306/apishard0
