--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -50,6 +50,16 @@
         <servlet-name>mvc-dispatcher</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
+
+    <servlet>
+        <servlet-name>echo</servlet-name>
+        <servlet-class>company.api.servlet.Echo</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>echo</servlet-name>
+        <url-pattern>/servlet/echo</url-pattern>
+    </servlet-mapping>
     
     <context-param>
         <param-name>contextConfigLocation</param-name>
