--- a/src/main/resources/api.properties
+++ b/src/main/resources/api.properties
@@ -13,3 +13,4 @@ db.user=${db.user}
 db.password=${db.password}
 db.dialect=${db.dialect}
 db.driver=${db.driver}
+db.updateSchema=${db.updateSchema}
