S3 and POST services

--- a/src/main/resources/api.properties
+++ b/src/main/resources/api.properties
@@ -14,3 +14,9 @@ db.password=${db.password}
 db.dialect=${db.dialect}
 db.driver=${db.driver}
 db.updateSchema=${db.updateSchema}
+
+ec2.accesskey=${ec2.accesskey}
+ec2.secretkey=${ec2.secretkey}
+
+s3.bucket=${s3.bucket}
+s3.url=${s3.url}
