--- a/src/main/config/prod.properties
+++ b/src/main/config/prod.properties
@@ -3,9 +3,9 @@ log.level.src=INFO
 log.level.sql=INFO
 log.level.sql.results=OFF
 
-db.url.apidb=jdbc:mysql://localhost:3306/apidb
-db.url.apishard0=jdbc:mysql://localhost:3306/apishard0
-db.url.apishard1=jdbc:mysql://localhost:3306/apishard1
+db.url.apidb=jdbc:mysql://localhost:3306/apidb?characterEncoding=UTF-8
+db.url.apishard0=jdbc:mysql://localhost:3306/apishard0?characterEncoding=UTF-8
+db.url.apishard1=jdbc:mysql://localhost:3306/apishard1?characterEncoding=UTF-8
 db.updateSchema=apidb apishard0 apishard1
 db.user=apiuser
 db.password=apipw
@@ -13,3 +13,9 @@ db.dialect=org.hibernate.dialect.MySQLDialect
 db.driver=com.mysql.jdbc.Driver
 
 config.override=
+
+ec2.accesskey=AKIAsomething
+ec2.secretkey=secretkey
+
+s3.bucket=somebucket
+s3.url=http://%BUCKET%.s3.amazonaws.com/%FILE%
